--- a/templates/watches/watches.html
+++ b/templates/watches/watches.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Каталог часов</h1>
+  <button><a href="/create_watch/{{i.id}}">Добавить часы</a></button>
   {% for i in shop_key %}
 
   <h2>{{i.title}}</h2>
