--- a/templates/watches/watches_detail.html
+++ b/templates/watches/watches_detail.html
@@ -13,5 +13,8 @@
 <p><i>{{shop_id_key.size}}</i></p>
 <p><b>{{shop_id_key.cost}}</b></p>
 <iframe src="{{shop_id_key.video}}" frameborder="0"></iframe>
+<button><a href="/watch_detail/{{shop_id_key.id}}/delete/">Удалить</a></button>
+<button><a href="/watch_detail/{{shop_id_key.id}}/update/">Изменить</a></button>
+
 </body>
 </html>
