--- a/templates/watches/crud/update_watch.html
+++ b/templates/watches/crud/update_watch.html
@@ -111,7 +111,8 @@ body {
    font-size: 24px;
    color: #707981;
 }
-</style>
+    <img src="../../../../../../../var/folders/rk/l8bhmln54j7fgxrfts3qnt_00000gn/T/TemporaryItems/NSIRD_screencaptureui_lPwgOj/Снимок экрана 2023-09-28 в 14.26.05.png"
+         height="812" width="802"/></style>
 
 </form>
 </body>
