--- a/templates/watches/watches.html
+++ b/templates/watches/watches.html
@@ -2,7 +2,7 @@
 
 <h1 style="text-align: center">Каталог часов</h1>
 <br>
-{% for i in shop_key %}
+{% for i in object_list %}
   <center>
     <div class="qwerty" style="width: 18rem;">
       <img src="{{i.image.url}}" class="card-img-top" alt="...">
