--- a/templates/parser/start_parse.html
+++ b/templates/parser/start_parse.html
@@ -10,6 +10,6 @@
     {{form.as_p}}
     <button type="submit">Взять данные</button>
 </form>
-<a href="/film-list">Перейти к списку фильмов</a>
+<a href="/film-list/">Перейти к списку фильмов</a>
 </body>
 </html>
